index.css
* {
    margin: 0;
}

.debug {
    border: 2px solid pink;
}

@font-face {
    font-family: numerals;
    src: url(font/digital-7.mono.ttf);
}

body {
    background-color: #1B244A;
    padding-top: 60px;
}

.container {
    width: 575px;
    margin: 20px auto 0px auto;
    display: flex;
    justify-content: space-between;
}

#period-button-container {
    display: flex;
    justify-content: center;
}

.vertical-container {
    display: flex;
    flex-direction: column;
    width: 15%;
    margin-top: 30px;
}

.team-name, .period-header {
    color: #EEEEEE;
    text-align: center;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 40px;
    font-weight: bold;
}

.period-header {
    font-size: 24px;
    margin-top: 20px;
}

.score {
    width: 150px;
}

.period {
    width: 100px;
}

.timer {
    width: 70%;
}

.timer-input {
    height: 45px;
    background-color: #9AABD8;
    border-radius: 5px;
    border: 2px solid #9AABD8;
    text-align: center;
    font-family: numerals;
    font-size: 24px;
}

.timer-input:invalid:not(:focus) {
    background: red;
}

.numeral {
    font-family: numerals;
    background-color: #080001;
    color: #F94F6D;
    text-align: center;
    border-radius: 5px;
    margin: 30px auto 0px auto;
    padding: 15px 0px;
    line-height: 90px;
    font-size: 90px;
}

.increment {
    width: 45px;
}

#resetbutton {
    width: 100px;
}

.button {
    font-family: numerals;
    height: 45px;
    margin: 0px 1.25px 0px 1.25px;
    font-size: 18px;
    color: #9aabd8;
    background-color: #1B244A;
    border-radius: 5px;
    border: 2px solid #9AABD8;
}

/*TODO: Button click effect*/

